home page complete

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@
 
 :root {
     --primary-color: #047aed;
+    --secondary-color: #1c3fa8;
+    --dark-color: #002240;
+    --light-color: #f4f4f4;
 }
 
 body {
@@ -146,4 +149,115 @@ img {
 .stats .grid p {
     font-size: 20px;
     font-weight: bold;
+}
+
+
+/* CLI */
+
+.cli .grid {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+}
+
+.cli .grid>*:first-child {
+    grid-column: 1/span 2;
+    grid-row: 1/span 2;
+}
+
+
+/* Cloud */
+
+.cloud .grid {
+    grid-template-columns: 4fr 3fr;
+}
+
+
+/* Languages */
+
+.languages .card {
+    text-align: center;
+    margin: 18px 10px 40px;
+    transition: 0.2s ease-in;
+}
+
+.languages .flex {
+    flex-wrap: wrap;
+}
+
+.languages,
+.card h4 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.languages .card:hover {
+    transform: translateY(-15px);
+}
+
+
+/* Footer */
+
+.footer .social a {
+    margin: 0 10px;
+}
+
+.footer ul a:hover {
+    border-bottom: 2px solid #fff;
+}
+
+.footer .social i:hover {
+    transform: scale(1.2);
+}
+
+
+/* Media Queries */
+
+
+/* Tablets and under */
+
+@media (max-width:943px) {
+    .grid,
+    .showcase .grid,
+    .stats .grid,
+    .cli .grid,
+    .cloud .grid {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
+    .showcase {
+        height: auto;
+    }
+    .showcase-text {
+        text-align: center;
+        margin-top: 40px;
+    }
+    .showcase-form {
+        justify-self: center;
+        margin: auto;
+    }
+    .cli .grid>*:first-child {
+        grid-row: 1;
+        grid-column: 1;
+    }
+    .footer .social a {
+        margin: 0 5px;
+    }
+    .cli .card {
+        text-align: center;
+    }
+}
+
+
+/* Moblie */
+
+@media (max-width:500px) {
+    .navbar {
+        height: 110px;
+    }
+    .navbar .flex {
+        flex-direction: column;
+    }
+    .navbar nav {
+        background: rgba(0, 0, 0, 0.2);
+    }
 }
