--- a/css/utilities.css
+++ b/css/utilities.css
@@ -7,6 +7,30 @@
     padding: 0 40px;
 }
 
+
+/* Alert */
+
+.alert {
+    background-color: var(--light-color);
+    padding: 10px 20px;
+    font-weight: bold;
+    margin: 15px 0;
+}
+
+.alert i {
+    margin-right: 10px;
+}
+
+.alert-success {
+    background-color: var(--success-color);
+    color: #fff;
+}
+
+.alert-error {
+    background-color: var(--error-color);
+    color: #fff;
+}
+
 .flex {
     display: flex;
     justify-content: center;
@@ -47,7 +71,7 @@
 }
 
 .btn:hover {
-    transform: scale(.9);
+    transform: scale(.98);
 }
 
 .btn-outline {
@@ -93,6 +117,25 @@
 .bg-dark a,
 .btn-dark a {
     color: #fff;
+}
+
+
+/* Text colors */
+
+.text-primary {
+    color: var(--primary-color);
+}
+
+.text-secondary {
+    color: var(--secondary-color);
+}
+
+.text-dark {
+    color: var(--dark-color);
+}
+
+.text-light {
+    color: var(--light-color);
 }
 
 
